<resources>
    <string name="app_name">Inventory</string>
    <string name="item">ITEM</string>
    <string name="price">PRICE</string>
    <string name="quantity_in_stock">QUANTITY\nIN STOCK</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_name">Product Name *</string>
    <string name="product_price">Product Price *</string>
    <string name="quantity_in_stock_label">Quantity in Stock *</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="required_fields">* required fields</string>
    <string name="not_available_price">N/A</string>
    <string name="delete">Delete</string>
    <string name="sell">Sell</string>
    <string name="attention">Attention</string>
    <string name="delete_question">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>